lcm-java: use factory method on boxed types