@@ -77,7 +77,7 @@ public final class Trace2DActionZindexDecrease extends ATrace2DAction {
    */
   public void actionPerformed(final ActionEvent e) {
     int value = this.m_trace.getZIndex().intValue();
-    this.m_trace.setZIndex(new Integer(value - this.m_decrease));
+    this.m_trace.setZIndex(Integer.valueOf(value - this.m_decrease));
   }
 
   /**
